# bcNs3

./: .clang-format  .gitignore
contrib/nr/: .gitignore  .gitlab-ci-clang.yml  .gitlab-ci-gcc.yml  .gitlab-ci.yml  .gitmodules  CHANGES.md  CMakeLists.txt  Makefile  README.md  RELEASE_NOTES.md
contrib/nr/doc/: .gitignore  Makefile  development-guidelines.md  doxygen-mcss.conf  doxygen.conf  getting-started.h  groups.h  introspected-doxygen.h  main.h
contrib/nr/examples/: CMakeLists.txt  cttc-3gpp-channel-example.cc  cttc-3gpp-channel-nums-fdm.cc  cttc-3gpp-channel-nums.cc  cttc-3gpp-channel-simple-fdm.cc  cttc-3gpp-channel-simple-ran.cc  cttc-3gpp-indoor-calibration.cc  cttc-channel-randomness.cc  cttc-error-model-amc.cc  cttc-error-model-comparison.cc  cttc-error-model.cc  cttc-fh-compression.cc  cttc-lte-ca-demo.cc  cttc-nr-cc-bwp-demo.cc  cttc-nr-demo.cc  cttc-nr-mimo-demo.cc  cttc-nr-notching.cc  cttc-realistic-beamforming.cc  rem-beam-example.cc  rem-example.cc
contrib/nr/helper/: beamforming-helper-base.cc  beamforming-helper-base.h  cc-bwp-helper.cc  cc-bwp-helper.h  file-scenario-helper.cc  file-scenario-helper.h  grid-scenario-helper.cc  grid-scenario-helper.h  hexagonal-grid-scenario-helper.cc  hexagonal-grid-scenario-helper.h  ideal-beamforming-helper.cc  ideal-beamforming-helper.h  node-distribution-scenario-interface.cc  node-distribution-scenario-interface.h  nr-bearer-stats-calculator.cc  nr-bearer-stats-calculator.h  nr-bearer-stats-connector.cc  nr-bearer-stats-connector.h  nr-bearer-stats-simple.cc  nr-bearer-stats-simple.h  nr-helper.cc  nr-helper.h  nr-mac-rx-trace.cc  nr-mac-rx-trace.h  nr-mac-scheduling-stats.cc  nr-mac-scheduling-stats.h  nr-phy-rx-trace.cc  nr-phy-rx-trace.h  nr-point-to-point-epc-helper.cc  nr-point-to-point-epc-helper.h  nr-radio-environment-map-helper.cc  nr-radio-environment-map-helper.h  nr-spectrum-value-helper.cc  nr-spectrum-value-helper.h  nr-stats-calculator.cc  nr-stats-calculator.h  realistic-beamforming-helper.cc  realistic-beamforming-helper.h  scenario-parameters.cc  scenario-parameters.h  (+2 more)
contrib/nr/model/: bandwidth-part-gnb.cc  bandwidth-part-gnb.h  bandwidth-part-ue.cc  bandwidth-part-ue.h  beam-conf-id.cc  beam-conf-id.h  beam-id.cc  beam-id.h  beam-manager.cc  beam-manager.h  beamforming-vector.cc  beamforming-vector.h  bwp-manager-algorithm.cc  bwp-manager-algorithm.h  bwp-manager-gnb.cc  (+131 more)
keys/node0/: private.pem  public.pem
keys/node1/: private.pem  public.pem
keys/node2/: private.pem  public.pem
keys/node3/: private.pem  public.pem
scratch/: CMakeLists.txt  blockchain-simulator.cc  gnb_pbft.cc  nr-demo.cc  nr-pbft.cc
src/applications/: CMakeLists.txt
src/applications/helper/: network-helper.cc  network-helper.h
src/applications/model/: block.cc  block.h  crypto.cc  crypto.h  message.cc  message.h  pbft-node.cc  pbft-node.h
src/lte/: CMakeLists.txt
(+289 files in other folders)
